added test templates